<resources>
    <string name="app_name">DemoDataBinding</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="age">Age</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="hokey">Hokey</string>
    <string name="sports">Sports : </string>
    <string name="gender">Gender : </string>
    <string name="city">City : </string>

</resources>
